--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <main>
     <div id='canvas'>
       <div class='squaretr'>
-        <div class='triangle'>
+        <div class='triangle-up'>
         </div>
       </div>
       <div class='squaretl'>
-        <div class='circle'>
+        <div class='triangle-down'>
         </div>
       </div>
       <div class='squareb'>
-        <div class='triangle'>
+        <div class='circle'>
         </div>
       </div>
     </div>
