--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
   <main>
     <div id='canvas'>
-      <div class='squaretr'>
-        <div class='triangle-up'>
+      <div class='square square-right'>
+        <div class='triangle left'>
         </div>
       </div>
-      <div class='squaretl'>
-        <div class='triangle-down'>
+      <div class='square square-left'>
+        <div class='triangle flip right'>
         </div>
       </div>
-      <div class='squareb'>
+      <div class='square square-bottom'>
         <div class='circle'>
         </div>
       </div>
